--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
-/.DS_Store
-/node_modules/
 node_modules
-public/build
+
+# Output
+.output
+.vercel
+.netlify
+.wrangler
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
